--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "gymadminpanel": {
+    "BankPortal": {
       "root": "",
       "sourceRoot": "src",
       "projectType": "application",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/gymadminpanel",
+            "outputPath": "dist/bankPortal",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -69,18 +69,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "gymadminpanel:build"
+            "browserTarget": "bankPortal:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "gymadminpanel:build:production"
+              "browserTarget": "bankPortal:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "gymadminpanel:build"
+            "browserTarget": "bankPortal:build"
           }
         },
         "test": {
@@ -114,7 +114,7 @@
         }
       }
     },
-    "gymadminpanel-e2e": {
+    "bankPortal-e2e": {
       "root": "e2e/",
       "projectType": "application",
       "prefix": "",
@@ -123,11 +123,11 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "gymadminpanel:serve"
+            "devServerTarget": "bankPortal:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "gymadminpanel:serve:production"
+              "devServerTarget": "bankPortal:serve:production"
             }
           }
         },
@@ -143,5 +143,5 @@
       }
     }
   },
-  "defaultProject": "gymadminpanel"
+  "defaultProject": "bankPortal"
 }
